added some debug output
Signed-off-by: Thomas Schuetz <thomas.schuetz@dynatrace.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,3 +18,4 @@ jobs:
           outputPath: "output"
           repository: "${{ github.actor}}/${{ github.event.repository.name }}"
           token: "${{ secrets.GITHUB_TOKEN }}"
+          bump: "patch"
